src/App.css
@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&family=Syne:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Sora:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
:root {
  --primary-background: #FFFCF5;
  --secondary-background: #91ac84;
  --card-background: #5c7d6d;
  --card-2-background: #6D9481;
  --card-3-background: #91ac84;
  --toggle-bg: #f4d1e2;
  --primary-text-color: #4B4841;
  --secondary-text-color: #6D9481;
  --accent-text-color: #6A0B44;
  --hover-text-color: #08605F;
  --card-text-color: #FFFCF5;
  --icon-color: #5c7d6d;
  --beige: #FFFCF5;
  --black: #262626;
  --grey: #585555;
  --dark-pink: #6A0B44;
  --mint-green: #D0E2C7;
  --light-green: #6D9481;
  --sage-green: #91ac84;
  --green: #5c7d6d;
  --rose: #f4d1e2;
  --yellow: #EC9A29;
  --cyan: #08605F;
  --cherry-blossom: #F6C1C3;
  --record-border: #37644e; 
}

[data-theme="dark"] {
  --primary-text-color: #FFFCF5;
  --secondary-text-color: #f4d1e2;
  --primary-background: #5c7d6d;
  --secondary-background: #D0E2C7;
  --card-background: #5c7d6d;
  --card-2-background: #6D9481;
  --card-3-background: #91ac84;  
  --card-text-color: #FFFCF5;
  --accent-text-color: #F6C1C3;
  --hover-text-color: #6A0B44;
  --toggle-bg: #08605F;
  --icon-color: #FFFCF5;
  --record-border: #795a7a; 
  --card-text-color: #FFFCF5;

}

.loader:empty {
  position: absolute;
  top: calc(50% - 4em);
  left: calc(50% - 4em);
  width: 6em;
  height: 6em;
  background-image: url(../src/assets/imgs/record_player.svg);
  border-radius: 50%;
  animation: loading 4s infinite linear;
}

@keyframes loading {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes load8 {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

body {
  background: var(--primary-background);
}

li {
  list-style: none; 
}

#tsparticles { 
  z-index: 0;
}

.cardLink {
  color: var(--card-text-color);
  font-size: 14px;
  text-decoration: underline;
}

.App {
  font-family: 'Sora', sans-serif;
  background-color: var(--primary-background);
  color: var(--primary-text-color);
  width: 100%;
  transition: background-color 350ms ease-in-out;
}

h2 {
  font-family: 'Syne Mono', monospace; 
}

.App-header {
  z-index: 1;
  color: var(--primary-text-color);
  min-height: 100px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: right;
  font-size: 24px;
  font-weight: 600;
}

.App-header li {
  font-family: 'Syne Mono', monospace; 
  margin-right: 50px;
  justify-content: right;
  list-style: none; 
  transition: .3s;
}

ul.App-header {
  display: flex;
  flex-direction: row;
}

ul.App-header:hover li {
  filter: blur(4px);
}

ul.App-header li:hover {
  filter: blur(0px);
}


.App-link {
  color: var(--primary-text-color);
  text-decoration: none;
}

.App-header-vertical {
  flex-direction: column;
}

.Navbar {
  z-index: 1;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin: 0% 2%;
}

.hamburger {
  display: none;
}

.Logo {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  width: 450px;
  font-family: 'Syne', sans-serif; 
}

.logoLeft,
.logoRight {
  margin: 0%;
  margin-right: 1%;
  height: 50px;  
  z-index: 2;
  transition: .5s ease-in-out;
}

.logoLeft {
  margin-left: -1%;
  margin-right: 0%
}

.logoRight {
  margin-left: 0%;
  margin-top: 10px;
}

.Logo:hover .logoLeft {
  margin-left: 0%;
  margin-right: 1%;
  transition-duration: .5s ease-in-out;
}

.Logo:hover .logoRight {
  margin-left: 9.5%;
  transition: .5s ease-in-out;
}

.logoText {
  justify-content: center;
  z-index: 0;
  width: 1px;
  font-size: 24px;
  font-weight: 700;
  transition-duration: .5s;
  color: rgba(255, 255, 255, 0);
}

.Logo:hover .logoText {
  transition-duration: 1s;
  color: var(--primary-text-color);
}

.aboutContainer,
.heroContainer,
.musicContainer,
.projectContainer {
  display: flex;
  justify-content: center;
  flex-direction: row;
  margin: 5% 2%;
}

.record {
  animation: rotate 10s linear infinite;
}

.Circle,
.recordCircle {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 175px;
  height: 175px;
  background: linear-gradient(45deg, var(--black), var(--grey));
  border: solid 7px pink;
  border-radius: 50%;
  animation: rotate 10s linear infinite;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.Circle {
  display: flex;
  justify-content: center;
  align-items: center;  
  background: var(--primary-background);
  border: solid 2px rgb(122, 88, 94);
  width: 50px;
  height: 50px;
}

.latestInfo {
  font-family: 'Syne Mono', monospace; 
  margin: 0px 30px;
}

.latestInfo > h2  {
  margin-bottom: 5px;
  color: var(--accent-text-color);
  font-weight: 600;
}

.latestInfo > h3  {
  font-family: 'Sora' , sans-serif;
  font-weight: 400;
  margin-bottom: 10%;
}

.spotifyContainer,
.latestInfo {
  padding: 0%;
  width: 370px;
  flex-direction: column;
  z-index: 1;
}

.spotifyContainer {
  width: 500px;
  margin-right: 30px;
}

.recordContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 250px;
  min-width: 250px;
  max-height: 250px;
  max-width: 250px;
  background: var(--secondary-text-color);
  border: 8px solid var(--record-border);
  border-radius: 15%;
  margin-right: 30px;
  z-index: 1;
}

.latestText > h3 {
  font-family: 'Syne Mono', monospace; 
  margin: 40px;
  color:#FFFCF5;
}

.heroSection {
  display: flex;
  align-items: center;
}

.heroText {
  margin: 0px 30px;
  z-index: 1;
}
/* ... */

